website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.4.0/blog.mdx
---
description: Deploy a full-featured blog in no time with Docusaurus.
---

# 部落格

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

部落格功能讓您能快速部署一個功能完整的部落格。

:::info

查看 [部落格插件 API 參考文件](./api/plugins/plugin-content-blog.mdx) 以獲取完整的選項列表。

:::

## 初始設定 {#initial-setup}

要設定網站的部落格，請先建立一個 `blog` 目錄。

接著，在 `docusaurus.config.js` 中加入部落格的連結項目：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // ...
    navbar: {
      items: [
        // ...
        // highlight-next-line
        {to: 'blog', label: 'Blog', position: 'left'}, // or position: 'right'
      ],
    },
  },
};
```

## 新增文章 {#adding-posts}

要在部落格中發布文章，請在部落格目錄內建立一個 Markdown 檔案。

例如，在 `website/blog/2019-09-05-hello-docusaurus.md` 建立一個檔案：

```md title="website/blog/2019-09-05-hello-docusaurus.md"
---
title: Welcome Docusaurus
description: This is my first post on Docusaurus.
slug: welcome-docusaurus-v2
authors:
  - name: Joel Marcey
    title: Co-creator of Docusaurus 1
    url: https://github.com/JoelMarcey
    image_url: https://github.com/JoelMarcey.png
  - name: Sébastien Lorber
    title: Docusaurus maintainer
    url: https://sebastienlorber.com
    image_url: https://github.com/slorber.png
tags: [hello, docusaurus-v2]
image: https://i.imgur.com/mErPwqL.png
hide_table_of_contents: false
---

Welcome to this blog. This blog is created with [**Docusaurus 2**](https://docusaurus.io/).

<!-- truncate -->

This is my first post on Docusaurus 2.

A whole bunch of exploration to follow.
```

[front matter](./guides/markdown-features/markdown-features-intro.mdx#front-matter) 可用於為部落格文章添加更多元數據，例如作者資訊，但 Docusaurus 也能在沒有 front matter 的情況下推斷所有必要的元數據。有關所有可能的欄位，請參閱 [API 文件](api/plugins/plugin-content-blog.mdx#markdown-front-matter)。

## 部落格列表 {#blog-list}

部落格的索引頁面（預設位於 `/blog`）是 _部落格列表頁面_，所有部落格文章會在此集中顯示。

在部落格文章中使用 `<!--truncate-->` 標記來表示在查看所有已發布部落格文章時將顯示的摘要。`<!--truncate-->` 上方的任何內容都將成為摘要的一部分。請注意，截斷標記上方的部分必須是獨立可渲染的 Markdown。例如：

```md title="website/blog/my-post.md" {7}
---
title: Markdown blog truncation example
---

All these will be part of the blog post summary.

<!-- truncate -->

But anything from here on down will not be.
```

對於使用 `.mdx` 副檔名的檔案，請改用 [MDX](https://mdxjs.com/) 註解 `{/* truncate */}`：

```md title="website/blog/my-post.mdx" {7}
---
title: MDX blog truncation Example
---

All these will be part of the blog post summary.

{/* truncate */}

But anything from here on down will not be.
```

預設情況下，每個部落格列表頁面會顯示 10 篇文章，但您可以透過插件配置中的 `postsPerPage` 選項來控制分頁。如果設定 `postsPerPage: 'ALL'`，則會停用分頁，所有文章將顯示在第一頁。您還可以為部落格列表頁面添加元描述以提升 SEO：

```js title="docusaurus.config.js"
export default {
  // ...
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-start
          blogTitle: 'Docusaurus blog!',
          blogDescription: 'A Docusaurus powered blog!',
          postsPerPage: 'ALL',
          // highlight-end
        },
      },
    ],
  ],
};
```

## 部落格側邊欄 {#blog-sidebar}

部落格側邊欄會顯示最近的部落格文章。預設顯示的項目數量為 5，但您可以透過插件配置中的 `blogSidebarCount` 選項來自訂。設定 `blogSidebarCount: 0` 時，側邊欄將完全停用，容器也會被移除，這將增加主容器的寬度。特別地，如果設定 `blogSidebarCount: 'ALL'`，則會顯示 _所有_ 文章。

您還可以使用 `blogSidebarTitle` 選項來更改側邊欄的標題文字。例如，如果設定了 `blogSidebarCount: 'ALL'`，您可能希望將預設的「最近文章」改為「所有文章」：

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-start
          blogSidebarTitle: 'All posts',
          blogSidebarCount: 'ALL',
          // highlight-end
        },
      },
    ],
  ],
};
```

## 部落格文章日期 {#blog-post-date}

Docusaurus 會從多種模式中提取 `YYYY-MM-DD` 日期，例如 `YYYY-MM-DD-my-blog-post-title.md` 或 `YYYY/MM/DD/my-blog-post-title.md`。這讓您可以輕鬆地按年、按月分組部落格文章，或使用扁平結構。

<details>
<summary>Supported date extraction patterns</summary>

| Pattern | Example |
| --- | --- |
| Single file | `2021-05-28-my-blog-post-title.md` |
| MDX file | `2021-05-28-my-blog-post-title.mdx` |
| Single folder + `index.md` | `2021-05-28-my-blog-post-title/index.md` |
| Folder named by date | `2021-05-28/my-blog-post-title.md` |
| Nested folders by date | `2021/05/28/my-blog-post-title.md` |
| Partially nested folders by date | `2021/05-28-my-blog-post-title.md` |
| Nested folders + `index.md` | `2021/05/28/my-blog-post-title/index.md` |
| Date in the middle of path | `category/2021/05-28-my-blog-post-title.md` |

Docusaurus can extract the date from the posts using any of the naming patterns above. It is advisable to choose one pattern and apply it to all posts to avoid confusion.

</details>

:::tip

使用資料夾可以方便地將部落格文章的圖片與 Markdown 檔案放在一起。

:::

此命名慣例為可選項，您也可以透過 front matter 提供日期。由於 front matter 遵循支援日期時間標記法的 YAML 語法，若需要更精確的發布時間，可使用 front matter 設定。例如，當同一天發布多篇文章時，可依照當日時間排序：

```md title="earlier-post.md"
---
date: 2021-09-13T10:00
---
```

```md title="later-post.md"
---
date: 2021-09-13T18:00
---
```

## 部落格文章作者 {#blog-post-authors}

使用 front matter 中的 `authors` 欄位來宣告部落格文章作者。作者至少需具備 `name` 或 `image_url` 屬性。Docusaurus 會使用 `url`、`email` 和 `title` 等資訊，但其他任何資訊皆可自由添加。

### 行內作者 {#inline-authors}

部落格文章作者可直接在 front matter 中宣告：

```mdx-code-block
<Tabs groupId="author-front-matter">
<TabItem value="single" label="Single author">
```

```md title="my-blog-post.md"
---
authors:
  name: Joel Marcey
  title: Co-creator of Docusaurus 1
  url: https://github.com/JoelMarcey
  image_url: https://github.com/JoelMarcey.png
  email: jimarcey@gmail.com
---
```

```mdx-code-block
</TabItem>
<TabItem value="multiple" label="Multiple authors">
```

```md title="my-blog-post.md"
---
authors:
  - name: Joel Marcey
    title: Co-creator of Docusaurus 1
    url: https://github.com/JoelMarcey
    image_url: https://github.com/JoelMarcey.png
    email: jimarcey@gmail.com
  - name: Sébastien Lorber
    title: Docusaurus maintainer
    url: https://sebastienlorber.com
    image_url: https://github.com/slorber.png
---
```

```mdx-code-block
</TabItem>
</Tabs>
```

:::tip

此選項最適合剛開始使用或偶爾發布文章的臨時作者。

:::

:::info

建議使用 `authors` front matter，但舊版 `author_*` front matter 仍受支援：

```md title="my-blog-post.md"
---
author: Joel Marcey
author_title: Docusaurus 1 共同創建者
author_url: https://github.com/JoelMarcey
author_image_url: https://github.com/JoelMarcey.png
---
```

:::

### 全域作者 {#global-authors}

對於固定發布文章的常駐作者，若需在每篇文章中維護作者資訊會相當繁瑣。

您可以在全域設定檔中宣告這些作者：

```yml title="website/blog/authors.yml"
jmarcey:
  name: Joel Marcey
  title: Co-creator of Docusaurus 1
  url: https://github.com/JoelMarcey
  image_url: https://github.com/JoelMarcey.png
  email: jimarcey@gmail.com

slorber:
  name: Sébastien Lorber
  title: Docusaurus maintainer
  url: https://sebastienlorber.com
  image_url: https://github.com/slorber.png
```

:::tip

使用 `authorsMapPath` 插件選項來設定路徑。亦支援 JSON 格式。

:::

在部落格文章的 front matter 中，可引用全域設定檔中宣告的作者：

```mdx-code-block
<Tabs groupId="author-front-matter">
<TabItem value="single" label="Single author">
```

```md title="my-blog-post.md"
---
authors: jmarcey
---
```

```mdx-code-block
</TabItem>
<TabItem value="multiple" label="Multiple authors">
```

```md title="my-blog-post.md"
---
authors: [jmarcey, slorber]
---
```

```mdx-code-block
</TabItem>
</Tabs>
```

:::info

`authors` 系統非常靈活，可滿足更進階的使用情境：

<details>
  <summary>混合行內作者與全域作者</summary>

您可以主要使用全域作者，同時仍保留使用行內作者的彈性：

```md title="my-blog-post.md"
---
authors:
  - jmarcey
  - slorber
  - name: 行內作者名稱
    title: 行內作者頭銜
    url: https://github.com/inlineAuthor
    image_url: https://github.com/inlineAuthor
---
```

</details>

<details>
  <summary>覆寫全域作者的局部設定</summary>

您可針對單篇部落格文章自訂全域作者的資料：

```md title="my-blog-post.md"
---
authors:
  - key: jmarcey
    title: Joel Marcey 的新頭銜
  - key: slorber
    name: Sébastien Lorber 的新名稱
---
```

</details>

<details>
  <summary>本地化作者設定檔</summary>

設定檔可進行本地化，只需建立其本地化副本於：

```bash
website/i18n/[locale]/docusaurus-plugin-content-blog/authors.yml
```

</details>

:::

無論是透過 front matter 或作者對照表宣告的作者，都必須具備名稱或頭像（或兩者皆有）。若某篇文章的所有作者皆未提供名稱，Docusaurus 會以緊湊形式顯示其頭像。效果請參見[此測試文章](/tests/blog/2022/01/20/image-only-authors)。

:::warning[Feed generation]

[RSS 訂閱源](#feed)要求設定作者的電子郵件，該作者才會出現在訂閱源中。

:::

## 部落格文章標籤 {#blog-post-tags}

標籤在 front matter 中宣告，為分類提供了另一個維度。

可以內聯定義標籤，或引用預先定義在[`標籤文件`](api/plugins/plugin-content-blog.mdx#tags-file)中的標籤（可選，通常為 `blog/tags.yml`）。

在以下範例中：

- `docusaurus` 引用在 `blog/tags.yml` 中宣告的預定義標籤鍵
- `Releases` 是一個內聯標籤，因為它不存在於 `blog/tags.yml` 中

```md title="blog/my-post.md"
---
title: 'My blog post'
tags:
  - Releases
  - docusaurus
---

Content
```

```yml title="blog/tags.yml"
docusaurus:
  label: 'Docusaurus'
  permalink: '/docusaurus'
  description: 'Blog posts related to the Docusaurus framework'
```

## 閱讀時間 {#reading-time}

Docusaurus 根據字數為每篇部落格文章生成閱讀時間估計。我們提供了一個選項來自訂此功能。

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-start
          showReadingTime: true, // When set to false, the "x min read" won't be shown
          readingTime: ({content, frontMatter, defaultReadingTime}) =>
            defaultReadingTime({content, options: {wordsPerMinute: 300}}),
          // highlight-end
        },
      },
    ],
  ],
};
```

`readingTime` 回調函數接收三個參數：部落格內容文字作為字串、front matter 作為字串鍵及其值的記錄，以及預設的閱讀時間函數。它返回一個數字（閱讀時間，以分鐘為單位）或 `undefined`（禁用該頁面的閱讀時間）。

預設的閱讀時間能夠接受其他選項：`wordsPerMinute` 作為數字（預設值：300），以及 `wordBound` 作為從字串到布林值的函數。如果傳遞給 `wordBound` 的字串應該是單詞邊界（預設為空格、制表符和換行符），則該函數應返回 `true`。

:::tip

使用回調函數滿足所有自訂需求：

```mdx-code-block
<Tabs>
<TabItem value="disable-per-post" label="Per-post disabling">
```

**在單一頁面上禁用閱讀時間：**

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          showReadingTime: true,
          // highlight-start
          readingTime: ({content, frontMatter, defaultReadingTime}) =>
            frontMatter.hide_reading_time
              ? undefined
              : defaultReadingTime({content}),
          // highlight-end
        },
      },
    ],
  ],
};
```

用法：

```md "my-blog-post.md"
---
hide_reading_time: true
---

此頁面將不再顯示閱讀時間統計！
```

```mdx-code-block
</TabItem>
<TabItem value="passing-options" label="Passing options">
```

**將選項傳遞給預設的閱讀時間函數：**

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-start
          readingTime: ({content, defaultReadingTime}) =>
            defaultReadingTime({content, options: {wordsPerMinute: 100}}),
          // highlight-end
        },
      },
    ],
  ],
};
```

```mdx-code-block
</TabItem>
<TabItem value="using-custom-algo" label="Using custom algorithms">
```

**使用自訂的閱讀時間實現：**

```js title="docusaurus.config.js"
import myReadingTime from './myReadingTime';

export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-next-line
          readingTime: ({content}) => myReadingTime(content),
        },
      },
    ],
  ],
};
```

```mdx-code-block
</TabItem>
</Tabs>
```

:::

## 訂閱源 {#feed}

您可以通過傳遞 `feedOptions` 來生成 RSS / Atom / JSON 訂閱源。預設情況下，會生成 RSS 和 Atom 訂閱源。要禁用訂閱源生成，請將 `feedOptions.type` 設為 `null`。

```ts
type FeedType = 'rss' | 'atom' | 'json';

type BlogOptions = {
  feedOptions?: {
    type?: FeedType | 'all' | FeedType[] | null;
    title?: string;
    description?: string;
    copyright: string;
    language?: string; // possible values: http://www.w3.org/TR/REC-html40/struct/dirlang.html#langcodes
    limit?: number | false | null; // defaults to 20
    /** Allow control over the construction of BlogFeedItems */
    createFeedItems?: (params: {
      blogPosts: BlogPost[];
      siteConfig: DocusaurusConfig;
      outDir: string;
      defaultCreateFeedItems: (params: {
        blogPosts: BlogPost[];
        siteConfig: DocusaurusConfig;
        outDir: string;
      }) => Promise<BlogFeedItem[]>;
    }) => Promise<BlogFeedItem[]>;
  };
};
```

範例用法：

```js title="docusaurus.config.js"
export default {
  // ...
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-start
          feedOptions: {
            type: 'all',
            copyright: `Copyright © ${new Date().getFullYear()} Facebook, Inc.`,
            createFeedItems: async (params) => {
              const {blogPosts, defaultCreateFeedItems, ...rest} = params;
              return defaultCreateFeedItems({
                // keep only the 10 most recent blog posts in the feed
                blogPosts: blogPosts.filter((item, index) => index < 10),
                ...rest,
              });
            },
          },
          // highlight-end
        },
      },
    ],
  ],
};
```

訂閱源可以在以下位置找到：

<Tabs>
<TabItem value="RSS">

```text
https://example.com/blog/rss.xml
```

</TabItem>
<TabItem value="Atom">

```text
https://example.com/blog/atom.xml
```

</TabItem>
<TabItem value="JSON">

```text
https://example.com/blog/feed.json
```

</TabItem>
</Tabs>

## 進階主題 {#advanced-topics}

### 僅部落格模式 {#blog-only-mode}

您可以讓 Docusaurus 網站不設置專用首頁，直接將部落格文章列表頁設為首頁。將 `routeBasePath` 設為 `'/'`，即可透過根路由 `example.com/` 提供部落格內容（而非子路由 `example.com/blog/`）。

```js title="docusaurus.config.js"
export default {
  // ...
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        // highlight-next-line
        docs: false, // Optional: disable the docs plugin
        blog: {
          // highlight-next-line
          routeBasePath: '/', // Serve the blog at the site's root
          /* other blog options */
        },
      },
    ],
  ],
};
```

:::warning

請務必刪除現有的首頁檔案 `./src/pages/index.js`，否則會出現兩個檔案映射到相同路由的情況！

:::

:::warning

若停用文件插件，請記得刪除設定檔中其他參照文件插件之處。特別注意需移除導覽列中與文件相關的項目。

:::

:::tip

另有「僅文件模式」供僅需使用文件功能的用戶。詳見[僅文件模式](./guides/docs/docs-introduction.mdx)獲取詳細說明或關於 `routeBasePath` 的更完整解釋。

:::

### 多重部落格 {#multiple-blogs}

經典主題預設假設每個網站僅有一個部落格，因此僅包含一個部落格插件實例。若需在單一網站設置多個部落格，您可透過在 `docusaurus.config.js` 的 `plugins` 選項中指定另一個部落格插件來實現。

將 `routeBasePath` 設為您希望第二個部落格使用的 URL 路由。請注意此處的 `routeBasePath` 必須與第一個部落格不同，否則可能發生路徑衝突！同時將 `path` 設為包含第二個部落格條目的目錄路徑。

如[多實例插件](./using-plugins.mdx#multi-instance-plugins-and-plugin-ids)文件所述，您需要為插件分配唯一 ID。

```js title="docusaurus.config.js"
export default {
  // ...
  plugins: [
    [
      '@docusaurus/plugin-content-blog',
      {
        /**
         * Required for any multi-instance plugin
         */
        id: 'second-blog',
        /**
         * URL route for the blog section of your site.
         * *DO NOT* include a trailing slash.
         */
        routeBasePath: 'my-second-blog',
        /**
         * Path to data on filesystem relative to site dir.
         */
        path: './my-second-blog',
      },
    ],
  ],
};
```

範例可參考我們託管的第二個部落格[此處](/tests/blog)。